feat: add back community detection
